tests/csmith/bad/smith000935.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 935
 * Seed:      935
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
struct S0 {
    volatile int16_t  f0;
   int8_t  f1;
   int16_t  f2;
   uint64_t  f3;
   int32_t  f4;
   int8_t  f5;
    const uint16_t  f6;
};

/* --- GLOBAL VARIABLES --- */
int32_t g_4 = 1L;
struct S0 g_5 = {0x9342L,-8L,0xABE8L,0x21009D434678DC2ALL,0x2A10AA43L,1L,0x4C38L};/* VOLATILE GLOBAL g_5 */


/* --- FORWARD DECLARATIONS --- */
struct S0  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_5
 * writes: g_4
 */
struct S0  func_1(void)
{ /* block id: 0 */
    uint8_t l_2[9];
    int32_t *l_3[3];
    int i;
    for (i = 0; i < 9; i++)
        l_2[i] = 0L;
    for (i = 0; i < 3; i++)
        l_3[i] = &g_4;
    g_4 = l_2[3];
    return g_5;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_4 = %d\n", g_4);
    printf("checksum g_5.f0 = %d\n", g_5.f0);
    printf("checksum g_5.f1 = %d\n", g_5.f1);
    printf("checksum g_5.f2 = %d\n", g_5.f2);
    printf("checksum g_5.f3 = %d\n", g_5.f3);
    printf("checksum g_5.f4 = %d\n", g_5.f4);
    printf("checksum g_5.f5 = %d\n", g_5.f5);
    printf("checksum g_5.f6 = %d\n", g_5.f6);
}

/************************ statistics *************************
XXX max struct depth: 1
breakdown:
   depth: 0, occurrence: 3
   depth: 1, occurrence: 1

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 2

XXX total number of pointers: 1

XXX times a variable address is taken: 1
XXX times a pointer is dereferenced on RHS: 0
breakdown:
XXX times a pointer is dereferenced on LHS: 0
breakdown:
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 2
XXX number of pointers point to pointers: 0
XXX number of pointers point to scalars: 1
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 0
XXX average alias set size: 1

XXX times a non-volatile is read: 2
XXX times a non-volatile is write: 1
XXX times a volatile is read: 0
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 0
XXX percentage of non-volatile access: 100

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 3

XXX percentage a fresh-made variable is used: 66.7
XXX percentage an existing variable is used: 33.3
********************* end of statistics **********************/

